<resources>
    <string name="app_name">ధాన్యము సేకరణ</string>
    <string name="action_settings">Settings</string>
    <string name="Search">అన్వేషించు</string>
    <string name="getDetails">వివరముల కొరకు</string>
    <string name="updateDetails">నవీకరణ కొరకు</string>
    <string name="SearchForFarmerDetails"> రైతు వివరముల మార్పులు / చేర్పులు  కొరకు </string>
    <string name="SearchCriteria">వివరముల కొరకు</string>
    <string name="DSOSearchCriteria">డి.ఎస్.ఓ ఆర్డర్స్  వివరముల కొరకు</string>
    <string name="SearchWithName">రైతు పేరు / రైతు తండ్రి పేరు /ఫోన్ నంబరుతో అన్వేషణ</string>
    <string name="SearchWithIDNumber">ఆధార్ నంబరుతో అన్వేషణ</string>
    <string name="SearchWithOrderIDNumber">ఆర్డర్ సంఖ్యతో అన్వేషణ</string>
    <string name="str_timezone_alert">Please set your tab timezone correctly</string>
    <string name="str_alert">Alert!!</string>
    <string name="str_no_data_from_server">No data from server</string>
    <string name="str_damaged_bags">పనికి రాని గోనె సంచులు:</string>
    <string name="add_ro">దయచేసి మరొక ఆర్ఓ ని జోడించడానికి ఇక్కడ క్లిక్ చేయండి</string>
    <string name="millAddress">మిల్లు చిరునామా</string>
    <string name="Menu">కార్యక్రమాల పట్టిక</string>
    <string name="FarmerRegistration">రైతు నమోదు</string>
    <string name="nav_reports">సమాచార పట్టిక</string>
    <string name="TokenGeneration">టోకెన్ నమోదు</string>
    <string name="font_name_source_opensans">OpenSans</string>
    <string name="FAQ">నాణ్యత పరిక్షించుట</string>
    <string name="TextType">నాణ్యత పరిక్షించుట రకము</string>
    <string name="PaddyProcurementdetails">ధాన్యము సేకరణ వివరాలు</string>
    <string name="PaddyProcurement">ధాన్యము సేకరణ</string>
    <string name="PPCtoMiller">మిల్లుకు ధాన్యము  సరఫరా </string>
    <string name="Reports">రైతు వ్యక్తిగత వివరాలు</string>
    <string name="DataSync">సమాచారం సమకాలీకరణ</string>
    <string name="GunnysGivenToFarmer">రైతుకు గోనె సంచుల  సరఫరా</string>
    <string name="GunnyMgnt">గోనె సంచుల నిర్వహణ</string>
    <string name="TransproterReg">వాహన నమోదు</string>
    <string name="Printersetting">ప్రింటర్ సెట్టింగ్</string>
    <string name="locationupdate">స్థాన నవీకరణ</string>
    <string name="YealdPerAcers">ఎకరానికి దిగుబడి(క్వింటాల్లలో)</string>
    <string name="LandOwnerDetails">భూమి యజమాని వివరాలు</string>
    <string name="FarmerDetails">రైతు వ్యక్తిగత వివరాలు</string>
    <string name="FarmerName">రైతు పేరు *</string>
    <string name="FarmerName_n">రైతు పేరు</string>
    <string name="OwnerName">యజమాని పేరు *</string>
    <string name="DataSrc">Data src</string>
    <string name="Identifier">Identifier</string>
    <string name="OwnerAadhaar">యజమాని ఆధార్ నంబరు *</string>
    <string name="aadharNo">ఆధార్ నంబరు *</string>
    <string name="relation">బంధుత్వము *</string>
    <string name="FatherName">తండ్రి/భర్త పేరు *</string>
    <string name="Gender">పు/స్త్రీ</string>
    <string name="Male">పురుషుడు</string>
    <string name="Female">స్త్రీ</string>
    <string name="District">జిల్లా *</string>
    <string name="IsEnjoyer">భూమి యజమాని రకము*</string>
    <string name="Age" translatable="false">వయస్సు</string>
    <string name="Yes">అవును</string>
    <string name="No">కాదు</string>
    <string name="MobileNo">ఫోన్ నంబరు*</string>
    <string name="MobileNo_n">ఫోన్ నంబరు</string>
    <string name="Mandal">మండలం* </string>
    <string name="RegistrationNo">రైతు నమోదు నంబరు </string>
    <string name="TokenNo">టోకెన్ నంబరు*</string>
    <string name="TokenNo_n">టోకెన్ నంబరు</string>
    <string name="PinCode">పిన్ కోడ్</string>
    <string name="Village">గ్రామము*</string>
    <string name="Passbookno">పాసుపుస్తకము నంబరు*</string>
    <string name="Landinacers">భూమి (ఎకరాల్లో)*</string>
    <string name="Landinguntas">భూమి (గుంతలు)*</string>
    <string name="Landtype">భూమి రకము*</string>
    <string name="PattaNo">పట్టాదారు నంబరు</string>
    <string name="khattaNo">ఖాతా నంబరు*</string>
    <string name="SurveyNo">సర్వే నంబరు*</string>
    <string name="SurveyNo_header">సర్వే నంబరు</string>
    <string name="LandMark">సరిహద్దు గుర్తు</string>
    <string name="LandDetails">భూమి వివరాలు</string>
    <string name="EMail">ఇ-మెయిల్</string>
    <string name="MillID">మిల్లు ఐడి</string>
    <string name="RoID">ఆర్ఓ ఐడి</string>
    <string name="token_issued">Tokens Issued</string>
    <string name="farmers_registered">Farmers Registered</string>
    <string name="farmers_registered_pending">Farmers Registered Pending</string>
    <string name="faq_pending">FAQ Pending</string>
    <string name="faq_rejected">FAQ Rejected</string>
    <string name="faq_completed">FAQ Completed</string>
    <string name="gunnies_issued">Gunnies Issued</string>
    <string name="gunnies_pending">Gunnies Pending</string>
    <string name="procurement_pending">Procurement Pending</string>
    <string name="procurement_completed">Procurement Completed</string>
    <string name="paddy_purchased">Paddy Purchased</string>
    <string name="paddy_dispatched">Truck Chit Generated</string>
    <string name="truckchit_total">Truck Chit Total Transactions</string>
    <string name="truckchit_pending">Truck Chit Pending Transactions</string>
    <string name="truckchit_completed">Truck Chit Completed</string>
    <string name="partial_truckchit">Partial Truck Chit Transactions</string>
    <string name="procurement_sync">Procurement Sync</string>
    <string name="truckchit_sync">Truckchit Sync</string>
    <string name="MillName"> మిల్లు పేరు</string>
    <string name="DoorNo">ఇంటి  నంబరు</string>
    <string name="PattaBook">పట్టాదారు పాసు పుస్తకము</string>
    <string name="BankPassBook">బ్యాంక్ పాసు పుస్తకము</string>
    <string name="VROCirtified">గ్రామ కార్యదర్శి(VRO) సర్టిఫికేట్</string>
    <string name="tokendetails">టోకెన్   వివరాలు</string>
    <string name="cultivatedLand">ధాన్యం సాగు చేసిన భూమి (ఎకరాల్లో)*</string>
    <string name="cultivatedLand_header">ధాన్యం సాగు చేసిన భూమి</string>
    <string name="cultivatedLand_header_total">మొత్తం ధాన్యం సాగు చేసిన భూమి</string>
    <string name="cultivatedGuntas">ధాన్యం సాగు చేసిన భూమి (గుంతలు)*</string>
    <string name="leasedExtent">కౌలుకు ఇచ్చిన భూమి (ఎకరాల్లో)*</string>
    <string name="leasedGuntas">కౌలుకు ఇచ్చిన భూమి (గుంతలు)*</string>
    <string name="already_leasedExtent">ఇప్పటికే కౌలుకు ఇచ్చిన భూమి (ఎకరాల్లో)</string>
    <string name="already_leasedGuntas">ఇప్పటికే కౌలుకు ఇచ్చిన భూమి (గుంతలు)</string>
    <string name="already_culExtent">ఇప్పటికే ధాన్యం సాగు చేసిన భూమి (ఎకరాల్లో)</string>
    <string name="already_culGuntas">ఇప్పటికే ధాన్యం సాగు చేసిన భూమి (గుంతలు)</string>
    <string name="queuedate">రైతు  రావాల్సిన తేది *</string>
    <string name="queuedate_n">రైతు రావాల్సిన తేది </string>
    <string name="BankDetails">బ్యాంక్ వివరాలు</string>
    <string name="BankName"> బ్యాంక్ పేరు*</string>
    <string name="BranchName">బ్రాంచ్ పేరు*</string>
    <string name="IFSCCode">IFSC కోడ్*</string>
    <string name="BankAccountNo">బ్యాంక్ ఖాతా నంబరు*</string>
    <string name="BankAccountNo_reg">ఖాతా నంబరు*</string>
    <string name="BankAccountNoCfm">బ్యాంక్ ఖాతా నంబరు ధృవపరచండి*</string>
    <string name="AccountNo">ఖాతా నంబరు*</string>
    <string name="AccountNoCfm">ఖాతా నంబరు ధృవపరచండి*</string>
    <string name="BankAccountNoCfm_reg">ఖాతా నంబరు ధృవపరచండి*</string>
    <string name="NameAsPerBank">బ్యాంక్ ప్రకారం రైతు పేరు *</string>
    <string name="PaddyDetailsRegistration">ధాన్యం  వివరముల నమోదు</string>
    <string name="PaddyDetails">ధాన్యం  వివరాలు</string>
    <string name="PaddyType">ధాన్యం రకము *</string>
    <string name="PaddyQuantity">ధాన్యము పరిమాణం (క్వింటాల్లలో)*</string>
    <string name="Grade">రకము *</string>
    <string name="GunnyBagsN">గోనె సంచులు(కొత్తవి)</string>
    <string name="GunnyBagso">గోనె సంచులు(పాతవి)</string>
    <string name="Quantity">పరిమాణం (క్వింటాల్లలో)*</string>
    <string name="Quantity_header">పరిమాణం (క్వింటాల్లలో)</string>
    <string name="Quantity_header_toal">మొత్తం పరిమాణం (క్వింటాల్లలో)</string>
    <string name="pQuantity">పరిమాణం (క్వింటాల్లలో)</string>
    <string name="NewBags">కొత్త సంచులు</string>
    <string name="IssuedNewBags">ఇచ్చిన కొత్త సంచులు</string>
    <string name="IssuedOldBags">ఇచ్చిన పాత సంచులు</string>
    <string name="TotalBags">మొత్తం సంచులు </string>
    <string name="OldBags">పాత సంచులు</string>
    <string name="availNewBags">అందుబాటులో ఉన్న కొత్త సంచులు</string>
    <string name="availOldBags">అందుబాటులో ఉన్న పాత సంచులు</string>
    <string name="newbags_given_to_farmer">రైతు కి ఇచ్చిన కొత్త సంచులు</string>
    <string name="oldbags_given_to_farmer">రైతు కి ఇచ్చిన పాత సంచులు</string>
    <string name="PaymentDetails">నగదు వివరాలు</string>
    <string name="TotalAmount">మొత్తం నగదు</string>
    <string name="MSPAmount">ఎమ్.ఎస్.పి  నగదు</string>
    <string name="operatername">   ఆపరేటర్  పేరు</string>
    <string name="farmerscount">   రైతుల సంఖ్య</string>
    <string name="totalpaddyquantity">మొత్తం ధాన్యము తీసుకున్నది(క్వింటాల్లలో)</string>
    <string name="fil_new">వాడిన కొత్త గోనె సంచులు</string>
    <string name="fil_old">వాడిన పాత గోనె సంచులు</string>
    <string name="fil_tot">వాడిన మొత్తం గోనె సంచులు</string>
    <string name="emp_new">తిరిగి ఇస్తున్న కొత్త సంచులు</string>
    <string name="emp_old">తిరిగి ఇస్తున్న పాత సంచులు</string>
    <string name="emp_tot">తిరిగి ఇస్తున్న మొత్తం సంచులు</string>
    <string name="retNewBags">తిరిగి ఇస్తున్న కొత్త సంచులు</string>
    <string name="retOldBags">తిరిగి ఇస్తున్న పాత సంచులు</string>
    <string name="PPCGunnyBagsDetails">నిల్వ ఉన్న గోనెసంచుల వివరాలు</string>
    <string name="GunnyBagsDetails">గోనెసంచుల వివరాలు</string>
    <string name="PPCDetails"> పిపిసి  వివరములు</string>
    <string name="vil_details"> గ్రామముల వివరములు</string>
    <string name="PPCName">పిపిసి పేరు</string>
    <string name="PPCId">పిపిసి ఐడి</string>
    <string name="CreatedDate">రూపొందించబడింది తేదీ</string>
    <string name="Print">ముద్రణ రసీదు</string>
    <string name="TransId">లావాదేవీ ఐడి</string>
    <string name="PaddyProcuredDate">ధాన్యం సేకరించిన తేదీ </string>
    <string name="PaddyProcuredStatus">ధాన్యం సేకరణ  స్థితి</string>
    <string name="OpeningBalance">ప్రారంభపు నిల్వలు</string>
    <string name="ClosingBalance">ఆఖరి నిల్వలు</string>
    <string name="Noofgunniesused">వాడిన గోనె సంచులు:</string>
    <string name="ReceivedGunnyBagsfromDSO">డి.ఎస్.ఓ నుంచి స్వీకరించిన గోనె సంచులు వివరాలు</string>
    <string name="Receivinggunnies">తీసుకుంటున్న గోనెసంచులు:</string>
    <string name="NewHint">కొత్తవి</string>
    <string name="OldHint">పాతవి</string>
    <string name="rejected_faqs">తిరస్కరించబడిన టోకెన్లు</string>
    <string name="logout">లాగ్అవుట్</string>
    <string name="home">హోమ్</string>
    <string name="Ok">Ok</string>
    <string name="permissionText">As you use this app, Paddy Procurement System would like to serve you better. For this, we would like to read and use the following. </string>
    <string name="runtimePermsiions">Runtime Permissions</string>
    <string name="location">Location</string>
    <string name="locationtxt">Collect and monitor information about the location of your device</string>
    <string name="phone">Phone</string>
    <string name="phonetxt">Collect and monitor specific information about your device including your unique device identifier to uniquely identify the devices and ensure that unauthorized devices to prevent frauds</string>
    <string name="contacts">Contacts</string>
    <string name="contactstxt">Collect contacts information to automatically detect reference information.</string>
    <string name="iaccept">I accept</string>
    <string name="ideclined"><![CDATA[Declined & Proceed to Login]]></string>
    <string name="print_alert">No printer connected, Do you want to configure it now?</string>
    <string name="never_ask_again">Never ask again!</string>
    <string name="yes_connect">Yes, Connect</string>
    <string name="not_now">Not, now</string>
</resources>