<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu0"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_far_reg"
            android:icon="@drawable/menu1"
            android:title="@string/FarmerRegistration" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/menu2"
            android:title="@string/FAQ" />
        <item
            android:id="@+id/nav_gunny"
            android:icon="@drawable/menu3"
            android:title="@string/GunnysGivenToFarmer"/>
        <item
            android:id="@+id/nav_procurement"
            android:icon="@drawable/menu4"
            android:title="@string/PaddyProcurement" />
        <item
            android:id="@+id/nav_truckchit"
            android:icon="@drawable/menu5"
            android:title="@string/PPCtoMiller" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/menu6"
            android:title="@string/nav_reports" />
        <item
            android:id="@+id/nav_data_sync"
            android:icon="@drawable/menu7"
            android:title="@string/DataSync" />
        <item
            android:id="@+id/nav_printer_pair"
            android:icon="@drawable/menu8"
            android:title="@string/Printersetting" />
        <item
            android:id="@+id/nav_rej_faq"
            android:icon="@drawable/menu9"
            android:title="@string/rejected_faqs" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/menu10"
            android:title="@string/logout" />

        <item
            android:id="@+id/nav_version"
            android:title="" />
    </group>

</menu>
