<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_ppc"
        android:icon="@drawable/ppc_avtar"
        android:orderInCategory="100"
        android:title="@string/PPCDetails"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_ppc_details"
        android:icon="@drawable/ppc_know"
        android:orderInCategory="200"
        android:title="@string/PPCDetails"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_re_print"
        android:icon="@drawable/printer"
        android:orderInCategory="300"
        android:title="@string/Print"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logout"
        android:orderInCategory="400"
        android:title="@string/logout"
        app:showAsAction="always" />
</menu>
