<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FR_LandDetailsMain_Tr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:orientation="vertical">

    <CheckBox
        android:layout_marginLeft="2dp"
        android:id="@+id/FRLd_check_Cb"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:visibility="visible" />


    <LinearLayout
        android:id="@+id/FRLd_landDetails_LL"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/orderNumTV"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:background="@drawable/rounded_corner_et_disable"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/NewBagsTV"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:background="@drawable/rounded_corner_et_disable"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/OldBagsTV"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:background="@drawable/rounded_corner_et_disable"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TotBagsTV"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:background="@drawable/rounded_corner_et_disable"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/EmptyNewBagET"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:background="@drawable/rounded_corner_et"
            android:gravity="center_vertical"
            android:hint="@string/emp_new"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EmpOldBagsET"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:background="@drawable/rounded_corner_et"
            android:gravity="center_vertical"
            android:hint="@string/emp_old"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <EditText
            android:enabled="false"
            android:editable="false"
            android:id="@+id/FilNewBagsET"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:background="@drawable/rounded_corner_et_disable"
            android:gravity="center_vertical"
            android:hint="@string/fil_new"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:enabled="false"
            android:editable="false"
            android:id="@+id/FilOldBagsET"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:background="@drawable/rounded_corner_et_disable"
            android:gravity="center_vertical"
            android:hint="@string/fil_old"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:enabled="false"
            android:editable="false"
            android:id="@+id/FilTotBagsET"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:background="@drawable/rounded_corner_et_disable"
            android:gravity="center_vertical"
            android:hint="@string/fil_tot"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <EditText
            android:enabled="false"
            android:editable="false"
            android:id="@+id/EmpTotBagsET"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:background="@drawable/rounded_corner_et_disable"
            android:gravity="center_vertical"
            android:hint="@string/emp_tot"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />



    </LinearLayout>

</TableRow>
